# aoc-rust

./: .gitattributes  .gitignore  Cargo.toml  README.md
.git-crypt/keys/default/0/: 90736D3A7A67F4E1C51790B5DAE56F3A82A14C73.gpg
inputs/: test
inputs/y2023/: day01.txt  day01_example_01.txt  day01_example_02.txt  day02.txt  day02_example_01.txt  day03.txt  day03_example_01.txt  day04.txt  day04_example_01.txt  day05.txt  day05_01.example.txt  day05_example_01.txt  day06.txt  day07.txt  day08.txt  day09.txt  day10.txt  day11.txt  day12.txt  day13.txt  day14.txt  day15.txt  day16.txt  day17.txt  day18.txt  day19.txt  day20.txt  day21.txt  day22.txt  day23.txt  day24.txt  day25.txt
inputs/y2024/: 01.txt  01_example.txt  02.txt  02_example.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt
src/: actions.rs  cli.rs  constants.rs  formatter.rs  fs.rs  http.rs  lib.rs  main.rs  providers.rs  services.rs  solvers.rs
src/providers/: data.rs  date.rs  file_system.rs  fs.rs  http.rs
src/services/: date.rs  fs.rs  http.rs
src/solvers/: y2023.rs
src/solvers/y2023/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs
src/solvers/y2024/: day01.rs  day02.rs
templates/: day_template.txt
tests/: date_adapter.rs  fixtures.rs  http_adapter.rs  local_file_system.rs  main.rs  puzzle_errors_test.rs
tests/adapters/: date_adapter_test.rs  http_adapter_test.rs  mod.rs
tests/commands/: download_test.rs  help_test.rs  mod.rs  solve_test.rs
