[package]
name = "aoc"
description = "My own solutions to the Advent of Code in Rust"
version = "0.1.0"
authors = ["Pedro Piquero Plaza <pedropiqueroplaza@proton.me>"]
license = "Unlicense"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.40.0", features = ["full"] }
