[package]
name = "aoc"
description = "My own solutions to the Advent of Code in Rust"
version = "0.1.0"
authors = ["Pedro Piquero Plaza <pedropiqueroplaza@proton.me>"]
license = "Unlicense"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5.20", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["blocking"] }
thiserror = "1.0.64"
log = "0.4.22"
pretty_env_logger = "0.5.0"
chrono = "0.4.38"

[dev-dependencies]
rstest = "0.23.0"
