[package]
name = "aoc"
description = "My own solutions to the Advent of Code in Rust"
version = "0.1.0"
authors = ["Pedro Piquero Plaza <pedropiqueroplaza@proton.me>"]
license = "Unlicense"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5.20", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["blocking"] }
thiserror = "1.0.64"
log = "0.4.22"
pretty_env_logger = "0.5.0"
chrono = "0.4.38"
exitcode = "1.1.2"
derive_more = { version = "1.0.0", features = ["display"]}
human-panic = "2.0.2"
tabled = { version = "0.16.0", features = ["std", "ansi"]}
owo-colors = "4.1.0"
aho-corasick = "1.1.3"
logos = "0.14.2"
num-format = "0.4.4"
lazy_static = "1.5.0"

[dev-dependencies]
rstest = "0.23.0"
tempfile = "3.13.0"
mockito = "1.5.0"
assert_cmd = "2.0.16"
predicates = "3.1.2"
dotenv = "0.15.0"
